<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8e9ef"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NormalActivity.MainActivity">

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/title" />

    </LinearLayout>
-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/firstBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseball_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/nanum"
            android:text="@string/versionTextView"
            android:textColor="#5c196b"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="6dp"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:fontFamily="@font/nanum"
            android:text="@string/gameStartButton"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/howtoButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:fontFamily="@font/nanum"
            android:text="@string/gameWayButton"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/rankingButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:fontFamily="@font/nanum"
            android:text="@string/gameRankingButton"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:fontFamily="@font/nanum"
            android:text="@string/gameExitButton"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>