<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NormalActivity.howtoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/howtoBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/howtoImage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fcffb0">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/previousButton"
            android:background="@drawable/button_custom_for_howtoplay"
            android:fontFamily="@font/nanum"
            android:textColor="#ffafb0"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/preButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/homeButton"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/homeButton"
            android:background="@drawable/button_custom_for_howtoplay"
            android:fontFamily="@font/nanum"
            android:textColor="#ffafb0"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nextButton"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/nextButton"
            android:background="@drawable/button_custom_for_howtoplay"
            android:fontFamily="@font/nanum"
            android:textColor="#ffafb0"/>

    </LinearLayout>



</LinearLayout>